test/testmodules/Invalidation/InvalidA/src/InvalidA.jl
module InvalidA
Base.Experimental.@max_methods 2

include("pkgdef.jl")

end
